# raytracer-cpu

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  run.sh
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt
include/: camera.h  debug.h  imgui_setup.h  material.h  pch.h  ray.h  scene_examples.h  setting.h  shape.h  texture.h  utils.h  vector.h  window.h
src/: debug.cpp  main.cpp  utils.cpp
